Update plist for Geolocation Search

--- a/ios/HomeFinder/Info.plist
+++ b/ios/HomeFinder/Info.plist
@@ -36,6 +36,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Home Finder would like to use your location to find nearby properties</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
